refactor: collapse await stage hierarchy